# mac-osdev-vm-builder

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: implementation-guide.md  implementation-notes.md  requirements.md  retrospective.md
src/: check_host.rs  clone.rs  create_disk.rs  effects.rs  fetch_installer.rs  install.rs  lib.rs  main.rs  materialize_mirror.rs  provision_dev.rs  record_manifest.rs  resolve.rs  stage.rs  verify.rs
src/backend/: lima.rs  mod.rs  vfkit.rs
tests/: integration_tests.rs
