[package]
name = "mac-osdev-vm-builder"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
url = "2.5"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1.89"
